--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -6,8 +6,12 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.4);
   display: flex;
   height: 64px;
-  margin: 0 $spacing-2;
   list-style: none;
+  margin: 0 $spacing-2;
+  position: fixed;
+  left: $spacing-2;
+  right: $spacing-2;
+  z-index: 2;
 }
 
 .Header__item {
